# RFID_Task2

./: CMakeLists.txt  DummySensor.cc  DummySensor.hh  DummySensorSystem.cc  DummySensorSystem.hh  README.md
sensor/: CMakeLists.txt  DummySensor.cc  DummySensor.hh
